# riptree2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish-docs.yml  qa.yml
benches/: cli.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs  snapshot.rs
docs/: README.md  _config.yml  index.md
docs/_includes/: social.html
docs/criterion/cli_all_file_types/report/: index.html
docs/criterion/cli_nested_dirs/report/: index.html
docs/criterion/report/: index.html
src/: args.rs  entry.rs  filter.rs  icons.rs  ignore.rs  lib.rs  main.rs  options.rs  sorter.rs  stats.rs  tree.rs
tests/: conformance.rs  snapshot.rs  test.rs
tests/fixtures/bench/all_file_types/: test.json
tests/fixtures/bench/cli_all_file_types/: setup.sh  stdout.reference.snap  stdout.riptree2_compat.snap  stdout.snap
tests/fixtures/bench/cli_nested_dirs/: setup.sh  stdout.reference.snap  stdout.riptree2.snap  stdout.riptree2_compat.snap  stdout.snap  test.json
tests/fixtures/conformance/basic_usage/: setup.sh  stdout.reference.snap  stdout.sut.snap  test.json
tests/fixtures/conformance/empty_dir/: test.json
tests/fixtures/conformance/file_exclude_patterns_1/: stdout.reference.snap  test.json
tests/fixtures/conformance/file_exclude_patterns_2/: setup.sh  stdout.reference.snap  test.json
tests/fixtures/conformance/file_exclude_patterns_3/: setup.sh  stdout.reference.snap  stdout.sut.snap  test.json
tests/fixtures/conformance/file_exclude_patterns_ignore_case/: stdout.reference.snap  test.json
tests/fixtures/conformance/file_include_exclude_pattern_priority/: setup.sh  stdout.sut.snap  test.json
tests/fixtures/conformance/file_include_patterns_1/: setup.sh  stdout.sut.snap  test.json
tests/fixtures/conformance/file_include_patterns_2/: stdout.sut.snap  test.json
tests/fixtures/conformance/file_include_patterns_3/: setup.sh  stdout.sut.snap  test.json
tests/fixtures/conformance/file_include_patterns_ignore_case/: setup.sh  stdout.reference.snap  test.json
tests/fixtures/conformance/file_include_patterns_match_dirs.skip/: setup.sh  stdout.reference.snap  stdout.sut.snap  test.json
tests/fixtures/conformance/file_include_patterns_match_dirs_2/: setup.sh  stdout.reference.snap  test.json
tests/fixtures/conformance/hidden_files/: setup.sh  test.json
tests/fixtures/conformance/list_directories_only/: stdout.reference.snap  test.json
tests/fixtures/conformance/max_level/: setup.sh  stdout.sut.snap  test.json
tests/fixtures/conformance/multiple_roots/: setup.sh  stdout.reference.snap  test.json
tests/fixtures/conformance/no_report/: stdout.sut.snap  test.json
tests/fixtures/conformance/output_to_file/: file.out.txt.reference.snap  setup.sh  test.json
tests/fixtures/conformance/print_full_path_prefix/: setup.sh  stdout.reference.snap  test.json
tests/fixtures/conformance/regression_01/: setup.sh  stdout.reference.snap  test.json
tests/fixtures/conformance/regression_02.skip/: test.json
tests/fixtures/conformance/regression_03/: setup.sh  stdout.reference.snap  test.json
tests/fixtures/conformance/regression_04/: setup.sh  stdout.sut.snap  test.json
tests/fixtures/conformance/show_hidden_files/: setup.sh  stdout.reference.snap  stdout.sut.snap  test.json
tests/fixtures/conformance/symbolic_links/: setup.sh  stdout.reference.snap  test.json
tests/fixtures/snapshot/regression_03/: setup.sh  stdout.snap  test.json
tests/fixtures/snapshot/respects_gitignore/: setup.sh  stdout.snap  test.json
(+44 files in other folders)
