[package]
name = "riptree2"
version = "0.1.0"
edition = "2024"
authors = ["Ben Heidemann <ben@heidemann.dev>"]
description = """
riptree is a Rust rewrite of the Unix tree command. It aims to be a drop in
replacement (`alias tree="rt --compat"`) with some quality of life improvements,
such as automatically respecting ignore files.
"""
documentation = "https://github.com/bcheidemann/riptree"
homepage = "https://github.com/bcheidemann/riptree"
repository = "https://github.com/bcheidemann/riptree"
keywords = ["tree", "filesystem", "tool"]
categories = ["command-line-utilities"]

[[bin]]
path = "src/main.rs"
name = "rt"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
copy_dir = "0.1.3"
fixtures = "1.0.2"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempdir = "0.3.7"
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
fixtures = "1.0.2"
