[package]
name = "riptree2"
version = "0.8.1"
edition = "2024"
authors = ["Ben Heidemann <ben@heidemann.dev>"]
description = """riptree2 is a Rust rewrite of the Unix tree command. It aims to be a drop in replacement (`alias tree="rt --compat"`) with some quality of life improvements, such as automatically respecting ignore files."""
documentation = "https://bcheidemann.github.io/riptree2/"
homepage = "https://bcheidemann.github.io/riptree2/"
repository = "https://github.com/bcheidemann/riptree2"
keywords = ["tree", "filesystem", "tool"]
categories = ["command-line-utilities"]
license-file = "LICENSE"

[workspace]
resolver = "3"
members = ["crates/test_utils"]

[[bin]]
path = "src/main.rs"
name = "rt"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
globset = "0.4.16"
ignore = "0.4.23"
phf = { version = "0.11.3", features = ["macros"] }

[dev-dependencies]
assert_cmd = "2.0.17"
criterion = { version = "0.6.0", features = ["html_reports"] }
fixtures = "1.0.2"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempdir = "0.3.7"
test_utils.path = "./crates/test_utils"

[build-dependencies]
fixtures = "1.0.2"

[[bench]]
name = "cli"
harness = false
